# examen1compi1

Lexer/: expr_lexer.h
Lexer/tools/: fa2lexer
Parser/: expr_lexer.h  expr_parser.cpp  expr_parser.h  gramatica.cpp
ParserV2/: expr_lexer.h  expr_parser.cpp  expr_parser.h  ll1_grammar.cpp
ParserV2/tests/: test_parser.cpp
ParserV2/tools/: ecc  gramatica.txt
examen1compi1/Lexer/: expr_lexer.cpp
examen1compi1/Lexer/fa/: Start.jff  automaton.txt
examen1compi1/Lexer/tests/: CMakeLists.txt
examen1compi1/Parser/tools/: ecc  gramatica.txt
